--- a/src/app/add-expense/page.css
+++ b/src/app/add-expense/page.css
@@ -48,6 +48,14 @@ main#expensePage {
   display: flex;
 }
 
+.summaryWrapper {
+  background-color: #ffffff91;
+  padding: 1em;
+  padding-right: 1.5em;
+  border-radius: 20px;
+  height: fit-content;
+}
+
 .section {
   padding: 1.5em 2em 2em 2em;
   border-radius: 20px;
@@ -89,14 +97,23 @@ span.summaryProgressBar {
 }
 
 .summaryProgressBar #progressMonthly p,
-.summaryProgressBar #progressBudget p {
+.summaryProgressBar #progressBudget p,
+.categoryName {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 20px;
+  font-size: 0.8em;
+  width: fit-content;
+}
+
+.categoryName {
+  padding: 4px 8px;
+}
+
+.summaryProgressBar #progressMonthly p,
+.summaryProgressBar #progressBudget p {
+  position: absolute;
   padding: 1px 6px;
   font-weight: 700;
-  font-size: 0.9em;
-  width: fit-content;
-  position: absolute;
 }
 
 .summaryProgressBar #progressMonthly p {
@@ -143,7 +160,7 @@ span.summaryProgressBar {
   width: calc(100% - 10rem);
   padding: 8px;
   border-radius: 50px;
-  border: 4px solid #323232;
+  border: 3px solid #323232;
   display: flex;
   gap: 1em;
   z-index: 99;
@@ -245,7 +262,7 @@ span.summaryProgressBar {
   border-spacing: 0px;
   font-size: 0.9em;
   margin-top: 20px;
-  width: 80%;
+  width: 100%;
 }
 
 .section > table#expenseTable {
