--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -14,6 +14,10 @@
   border-radius: 6px;
 }
 
+.monthTitle select option {
+  font-size: 0.6em;
+}
+
 .section {
   padding: 1.5em 2em 2em 2em;
   border-radius: 20px;
