--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -1,350 +1,347 @@
 #income {
-    display: flex;
-    gap: 1em;
-    align-items: center;
+  display: flex;
+  gap: 1em;
+  align-items: center;
 }
 
 .baseBar {
-    padding: 16px 24px;
-    border-radius: 50px;
-    background: linear-gradient(122deg, #F0F4FE, #F7EFFD, #FECFDF, #FFF7EE);
-    margin-top: 20px;
+  padding: 16px 24px;
+  border-radius: 50px;
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
+  margin-top: 20px;
 }
 
 .saveBudgetContainer {
-    background: linear-gradient(122deg, #467AF8, #9C32E2, #FF2955, #FFB15A);
-    padding: 1.5px;
-    width: fit-content;
-    border-radius: 6px;
-    cursor: pointer;
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  padding: 1.5px;
+  width: fit-content;
+  border-radius: 6px;
+  cursor: pointer;
 }
 
 .saveBudget {
-    background: linear-gradient(122deg, #F0F4FE, #F7EFFD, #FECFDF, #FFF7EE);
-    padding: 8px 12px;
-    border-radius: 4px;
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
+  padding: 8px 12px;
+  border-radius: 4px;
 }
 
 .saveBudgetButton {
-    font-size: 1em;
-    font-weight: 800;
-    background: linear-gradient(122deg, #467AF8, #9C32E2, #FF2955, #FFB15A);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-size: 1em;
+  font-weight: 800;
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .sectionContainer {
-    display: flex;
-    gap: 1em;
+  display: flex;
+  gap: 1em;
 }
 
-.sectionContainer>div:first-child {
-    flex: 1;
-    position: relative;
+.sectionContainer > div:first-child {
+  flex: 1;
+  position: relative;
 }
 
 .categoryRow {
-    padding: .5em;
-    font-weight: 500;
-    padding-left: 30px;
-    position: relative;
+  padding: 0.5em;
+  font-weight: 500;
+  padding-left: 30px;
+  position: relative;
 }
 
 .categoryRow:first-child {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
 .categoryRow,
-.categoryRow>span {
-    display: flex;
-    justify-content: space-between;
+.categoryRow > span {
+  display: flex;
+  justify-content: space-between;
 }
 
-.categoryRow>span {
-    gap: 1em;
+.categoryRow > span {
+  gap: 1em;
 }
 
 .sliderPercent {
-    font-size: .85em;
-    font-weight: normal;
+  font-size: 0.85em;
+  font-weight: normal;
 }
 
 .categoryTitle {
-    font-size: 1.1em;
-    margin-right: 10px;
+  font-size: 1.1em;
+  margin-right: 10px;
 }
 
 .categoryTitleUnderline {
-    font-size: 1.1em;
-    margin-right: 10px;
-    border-bottom: 2px dashed #323232;
+  font-size: 1.1em;
+  margin-right: 10px;
+  border-bottom: 2px dashed #323232;
 }
 
 .categoryHelpText {
-    position: absolute;
-    z-index: 99;
-    min-height: 150px;
-    top: 0;
-    left: 22px;
-    width: 400px;
-    background-color: #fff;
-    border: #323232 3px solid;
-    padding: 6px;
-    border-radius: 6px;
+  position: absolute;
+  z-index: 99;
+  min-height: 150px;
+  top: 0;
+  left: 22px;
+  width: 400px;
+  background-color: #fff;
+  border: #323232 3px solid;
+  padding: 6px;
+  border-radius: 6px;
 }
 
 .categoryHelpText p:not(:first-child) {
-    margin-top: 3px;
-    font-size: .9em;
+  margin-top: 3px;
+  font-size: 0.9em;
 }
 
 .categoryHelpText p:nth-child(2) {
-    margin-block: 8px 12px;
+  margin-block: 8px 12px;
 }
 
 .showElement {
-    visibility: visible;
+  visibility: visible;
 }
 
 .hideElement {
-    visibility: hidden;
+  visibility: hidden;
 }
 
-div:has(>input[type="text"]) {
-    background: white;
-    border: #323232 2px solid;
-    padding: 0.25em;
-    font-size: 1em;
-    font-weight: 600;
-    width: fit-content;
+div:has(> input[type="text"]) {
+  background: white;
+  border: #323232 2px solid;
+  padding: 0.25em;
+  font-size: 1em;
+  font-weight: 600;
+  width: fit-content;
+}
+
+div.categorySearchContainer:has(> input[type="text"]) {
+  border-radius: 20px;
+  border: 2px solid #323232;
+  background-color: #fff;
+  padding: 4px 12px;
+  position: absolute;
+  z-index: 99;
+  right: 0;
+  top: -20px;
+  font-size: 0.9em;
+  box-shadow: 2px 4px 12px 0px #d5d5d5;
+  font-weight: 400;
 }
 
 input[type="text"] {
-    outline: none;
-    border: none;
-    font-size: 1em;
-    font-weight: 600;
-    width: 100px;
+  outline: none;
+  border: none;
+  font-size: 1em;
+  font-weight: 600;
+  width: 100px;
 }
 
 .slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 260px;
-    height: 12px;
-    border-radius: 5px;
-    background: #323232;
-    outline: none;
-    margin-top: 4px;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 260px;
+  height: 12px;
+  border-radius: 5px;
+  background: #323232;
+  outline: none;
+  margin-top: 4px;
 }
 
 .slider:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #fff;
-    border: 2px #323232 solid;
-    cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #fff;
+  border: 2px #323232 solid;
+  cursor: pointer;
 }
 
-
 .summaryTotals {
-    align-self: flex-end;
-    font-weight: 700;
-    font-size: 1.2em;
-    font-style: italic;
-    padding-left: 24px;
-    position: relative;
-    min-width: 125px;
+  align-self: flex-end;
+  font-weight: 700;
+  font-size: 1.2em;
+  font-style: italic;
+  padding-left: 24px;
+  position: relative;
+  min-width: 125px;
 }
 
 .summaryTotals p:first-child,
 .summaryTotals p:nth-child(3) {
-    color: #323232;
+  color: #323232;
 }
 
 .summaryTotals p:nth-child(2) {
-    border-bottom: 2px #323232 solid;
+  border-bottom: 2px #323232 solid;
 }
 
-
 .summaryTotals::after {
-    content: "";
-    border-bottom: 3px #323232 solid;
-    position: absolute;
-    left: 0;
-    width: 12px;
-    top: 50%;
+  content: "";
+  border-bottom: 3px #323232 solid;
+  position: absolute;
+  left: 0;
+  width: 12px;
+  top: 50%;
 }
 
 .graphContainer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.graphContainer>span:first-child {
-    flex: 1;
+.graphContainer > span:first-child {
+  flex: 1;
 }
 
 .graphHeader {
-    background: #FFF;
-    width: fit-content;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-weight: 500;
+  background: #fff;
+  width: fit-content;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: 500;
 }
 
 .budgetGraph {
-    display: flex;
-    align-items: flex-end;
-    gap: 12px;
-    padding: 0 12px;
-    margin-top: 20px;
-    border-bottom: #323232 solid 2px;
-    border-top: #323232 dashed 2px;
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+  padding: 0 12px;
+  margin-top: 20px;
+  border-bottom: #323232 solid 2px;
+  border-top: #323232 dashed 2px;
 }
 
 .budgetTotalChart {
-    height: 150px;
-    border-radius: 10px;
-    background-color: #EEE;
-    width: 110px;
-    display: flex;
-    position: relative;
+  height: 150px;
+  border-radius: 10px;
+  background-color: #eee;
+  width: 110px;
+  display: flex;
+  position: relative;
 }
-
 
 .budgetTotalChart .innerBar {
-    position: absolute;
-    width: 110px;
-    background-color: #FFF;
-    border-radius: 10px;
-    z-index: -1;
-    bottom: 0;
-    height: 150px;
+  position: absolute;
+  width: 110px;
+  background-color: #fff;
+  border-radius: 10px;
+  z-index: -1;
+  bottom: 0;
+  height: 150px;
 }
 
-
-.budgetTotalChart>p {
-    margin: auto;
-    font-weight: 700;
-    font-style: italic;
-    font-size: 1.2em;
+.budgetTotalChart > p {
+  margin: auto;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 1.2em;
 }
 
 .addCategoryButton {
-    border-radius: 20px;
-    border: 2px solid #323232;
-    padding: 4px 12px;
-    cursor: pointer;
-    position: absolute;
-    right: 0;
-    top: -20px;
-    font-size: .8em;
-    font-weight: 600;
+  border-radius: 20px;
+  border: 2px solid #323232;
+  padding: 4px 12px;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: -20px;
+  font-size: 0.8em;
+  font-weight: 600;
 }
 
-.categorySearchContainer {
-    border-radius: 20px;
-    border: 2px solid #323232;
-    background-color: #FFF;
-    padding: 4px 12px;
-    position: absolute;
-    z-index: 99;
-    right: 0;
-    top: -20px;
-    font-size: .9em;
-    box-shadow: 2px 4px 12px 0px #d5d5d5;
-}
-
-.categorySearchContainer>.addCategoryButton {
-    position: relative;
-    width: fit-content;
-    margin-left: auto;
-    margin-bottom: 6px;
-    top: 0;
+.categorySearchContainer > .addCategoryButton {
+  position: relative;
+  width: fit-content;
+  margin-left: auto;
+  margin-bottom: 6px;
+  top: 0;
 }
 
 .categorySearchContainer:has(p.addListItem) {
-    border-radius: 12px;
+  border-radius: 12px;
 }
 
-.categorySearchInput {
-    outline: none;
-    border: none;
-    color: #323232;
-    min-width: 400px;
+Input[type="text"].categorySearchInput {
+  outline: none;
+  border: none;
+  color: #323232;
+  min-width: 400px;
+  font-weight: 400;
+  font-size: 0.9em;
 }
 
 p.addListItem {
-    color: #323232;
-    margin-block: 3px;
-    cursor: pointer;
+  color: #323232;
+  margin-block: 3px;
+  cursor: pointer;
 }
 
 p.addListItem:hover {
-    background-color: #FFF;
+  background-color: #fff;
 }
 
 p.addListItem:first-child {
-    margin-top: 6px;
+  margin-top: 6px;
 }
 
 .searchFullBackground {
-    position: fixed;
-    z-index: -1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .removeCategory {
-    height: 18px;
-    width: 18px;
-    background-color: #FFF;
-    border-radius: 50%;
-    display: flex;
-    line-height: 18px;
-    font-size: .9em;
-    font-weight: 600;
-    position: absolute;
-    left: 0;
-    cursor: pointer;
+  height: 18px;
+  width: 18px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  line-height: 18px;
+  font-size: 0.9em;
+  font-weight: 600;
+  position: absolute;
+  left: 0;
+  cursor: pointer;
 }
 
-
 .removeCategory p {
-    margin: auto;
+  margin: auto;
 }
 
 #negativeTotal {
-    color: #FF2955;
+  color: #ff2955;
 }
 
 #sectionHeader {
-    margin-bottom: -.5em;
+  margin-bottom: -0.5em;
 }
 
 .sectionBGColor {
-    padding: .75em;
-    background-color: #FFF;
-    border-radius: 10px;
+  padding: 0.75em;
+  background-color: #fff;
+  border-radius: 10px;
 }
 
-
-.sectionBGColor div:has(>input[type="text"]) {
-    border: #323232 2px solid;
+.sectionBGColor div:has(> input[type="text"]) {
+  border: #323232 2px solid;
 }
 
 .sectionBGColor input[type="text"] {
-    color: #323232;
+  color: #323232;
 }
 
 /****** Section Specific Colors ******/
@@ -352,28 +349,28 @@ p.addListItem:first-child {
 #Essentials,
 #Non-Essentials,
 #Savings {
-    margin-top: 2.5em;
+  margin-top: 2.5em;
 }
 
 #Essentials,
 #Essentials .sectionBGColor input[type="text"] {
-    color: #467AF8;
+  color: #467af8;
 }
 
 #Essentials .slider {
-    background: #467AF8;
+  background: #467af8;
 }
 
 #Essentials .slider::-webkit-slider-thumb,
 #Essentials .summaryTotals p:nth-child(2),
 #Essentials .summaryTotals::after,
-#Essentials .sectionBGColor div:has(>input[type="text"]),
+#Essentials .sectionBGColor div:has(> input[type="text"]),
 #Essentials .budgetGraph,
 #Essentials .categoryHelpText,
 #Essentials .addCategoryButton,
 #Essentials .categoryTitleUnderline,
 #Essentials .categorySearchContainer {
-    border-color: #467AF8;
+  border-color: #467af8;
 }
 
 #Essentials .budgetTotalChart,
@@ -381,38 +378,38 @@ p.addListItem:first-child {
 #Essentials .sectionBGColor,
 #Essentials .graphHeader,
 #Essentials p.addListItem:hover {
-    background-color: #F0F4FE;
+  background-color: #f0f4fe;
 }
 
 #Essentials .budgetTotalChart .innerBar {
-    background-color: #d7e8fb;
+  background-color: #d7e8fb;
 }
 
 #Essentials .budgetTotalChart:first-child,
 #Non-Essentials .budgetTotalChart:first-child,
 #Savings .budgetTotalChart:first-child {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 #Non-Essentials,
 #Non-Essentials .sectionBGColor input[type="text"] {
-    color: #9C32E2;
+  color: #9c32e2;
 }
 
 #Non-Essentials .slider {
-    background: #9C32E2;
+  background: #9c32e2;
 }
 
 #Non-Essentials .slider::-webkit-slider-thumb,
 #Non-Essentials .summaryTotals p:nth-child(2),
 #Non-Essentials .summaryTotals::after,
-#Non-Essentials .sectionBGColor div:has(>input[type="text"]),
+#Non-Essentials .sectionBGColor div:has(> input[type="text"]),
 #Non-Essentials .budgetGraph,
 #Non-Essentials .categoryHelpText,
 #Non-Essentials .addCategoryButton,
 #Non-Essentials .categoryTitleUnderline,
 #Non-Essentials .categorySearchContainer {
-    border-color: #9C32E2;
+  border-color: #9c32e2;
 }
 
 #Non-Essentials .budgetTotalChart,
@@ -420,32 +417,32 @@ p.addListItem:first-child {
 #Non-Essentials .sectionBGColor,
 #Non-Essentials .graphHeader,
 #Non-Essentials p.addListItem:hover {
-    background-color: #F7EFFD;
+  background-color: #f7effd;
 }
 
 #Non-Essentials .budgetTotalChart .innerBar {
-    background-color: #ECD0FF;
+  background-color: #ecd0ff;
 }
 
 #Savings,
 #Savings .sectionBGColor input[type="text"] {
-    color: #FFA73D;
+  color: #ffa73d;
 }
 
 #Savings .slider {
-    background: #FFA73D;
+  background: #ffa73d;
 }
 
 #Savings .slider::-webkit-slider-thumb,
 #Savings .summaryTotals p:nth-child(2),
 #Savings .summaryTotals::after,
-#Savings .sectionBGColor div:has(>input[type="text"]),
+#Savings .sectionBGColor div:has(> input[type="text"]),
 #Savings .budgetGraph,
 #Savings .categoryHelpText,
 #Savings .addCategoryButton,
 #Savings .categoryTitleUnderline,
 #Savings .categorySearchContainer {
-    border-color: #FFA73D;
+  border-color: #ffa73d;
 }
 
 #Savings .budgetTotalChart,
@@ -453,18 +450,17 @@ p.addListItem:first-child {
 #Savings .sectionBGColor,
 #Savings .graphHeader,
 #Savings p.addListItem:hover {
-    background-color: #FFF7EE;
+  background-color: #fff7ee;
 }
 
 #Savings .budgetTotalChart .innerBar {
-    background-color: #FCE5CD;
+  background-color: #fce5cd;
 }
 
 @media screen and (max-width: 650px) {
-
-    .categoryRow>span {
-        visibility: hidden;
-        appearance: none;
-        width: 0;
-    }
+  .categoryRow > span {
+    visibility: hidden;
+    appearance: none;
+    width: 0;
+  }
 }
