--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -60,6 +60,7 @@
 
 .incomeContainer select option {
   background-color: #fff;
+  color: #323232;
 }
 
 .incomeContainer > div:has(> input[type="text"]) {
