--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -117,7 +117,9 @@ a.button p {
 
 .card span {
   display: inline-block;
-  transition: transform 200ms;
+  appearance: none;
+  opacity: 0;
+  transition: all 200ms;
 }
 
 .card h2 {
@@ -196,6 +198,8 @@ a.button p {
   }
 
   .card:hover span {
+    appearance: visible;
+    opacity: 1;
     transform: translateX(4px);
   }
 }
