--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -1,11 +1,63 @@
-.main.budgetTop {
+body {
   background-color: #096012;
+}
+
+.main.budgetTop {
   min-height: auto;
   color: white;
+  position: relative;
+}
+
+.main.budgetTop > div {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  padding: 2em;
+}
+
+.border {
+  height: 100%;
+  width: 1.5px;
+  background-color: #30df30;
+  position: absolute;
+}
+
+.left {
+  top: 0;
+  left: 5em;
+  z-index: -1;
+}
+
+.right {
+  top: 0;
+  right: 5em;
+  z-index: -1;
+}
+
+.borderTop {
+  width: 100%;
+  height: 1.5px;
+  background-color: #30df30;
+  position: absolute;
+  top: 3em;
+  left: 0;
+}
+
+@media screen and (max-width: 650px) {
+  .left {
+    left: 1em;
+  }
+  .right {
+    right: 1em;
+  }
+  .borderTop {
+    top: 1em;
+  }
 }
 
 .main.budgetBottom {
   background-color: #d0ffd0;
+  border-radius: 60px 60px 0 0;
 }
 
 .budgetExpenseWrapper {
