updating color for income input box

--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -78,6 +78,10 @@ body {
   align-items: center;
 }
 
+#income span {
+  color: #323232;
+}
+
 .baseBar {
   padding: 16px 24px;
   border-radius: 50px;
