re-factor of the save bar and adding month elements

--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -75,24 +75,50 @@ body {
 }
 
 .baseBar {
-  padding: 16px 24px;
+  padding: 8px;
   border-radius: 50px;
   background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.applyBudgetWrapper {
+  background-color: #fff;
+  padding: 6px;
+  padding-left: 12px;
+  width: fit-content;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  border-radius: 50px;
+  font-weight: 500;
+}
+
+.monthTitle select {
+  font-weight: 600;
+  font-family: Montserrat;
+  border: none;
+  outline: none;
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
+  padding: 4px;
+  padding-left: 8px;
+  border-radius: 20px;
 }
 
 .saveBudgetContainer {
   background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
-  padding: 1.5px;
+  padding: 1.8px;
   width: fit-content;
-  border-radius: 6px;
+  border-radius: 22px;
   cursor: pointer;
 }
 
 .saveBudget {
   background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
-  padding: 8px 12px;
-  border-radius: 4px;
+  padding: 4px 14px;
+  border-radius: 20px;
 }
 
 .saveBudgetButton {
@@ -102,6 +128,14 @@ body {
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.saveBudgetButton svg {
+  width: 13px;
+  height: 13px;
+  margin-right: 4px;
+  fill: #7057ed;
+}
+
 .incomeSection {
   display: flex;
   gap: 1em;
@@ -462,6 +496,11 @@ p.addListItem:first-child {
 
 #sectionHeader {
   margin-bottom: -0.5em;
+  font-weight: 600;
+}
+
+#sectionHeader em {
+  font-weight: 400;
 }
 
 .categoryRow div:has(> input[type="text"]) {
