adding unified theme across budget and dashboard with gradient

--- a/src/app/budget/page.css
+++ b/src/app/budget/page.css
@@ -46,7 +46,7 @@ body {
 }
 
 .main.budgetBottom {
-  background-color: #d0ffd0;
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
   border-radius: 60px 60px 0 0;
   align-items: center;
 }
@@ -656,4 +656,44 @@ p.addListItem:first-child {
   .borderTop {
     top: 1em;
   }
+}
+
+/* Imported Component Stlying */
+
+.successPopWrapper {
+  background-color: #fff;
+  padding: 1.5px;
+  width: fit-content;
+  position: fixed;
+  z-index: 99;
+  left: 2em;
+  bottom: 2em;
+  border-radius: 10px;
+}
+
+.successPopWrapper div {
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  padding: 1.5px;
+  border-radius: 8px;
+}
+
+.successPopWrapper div div {
+  background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
+  padding: 10px 20px;
+  padding-left: 30px;
+  border-radius: 6px;
+  position: relative;
+}
+
+.removeSuccessPopUp {
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  display: flex;
+  line-height: 18px;
+  font-size: 0.9em;
+  font-weight: 600;
+  cursor: pointer;
+  position: absolute;
+  left: 12px;
 }
