--- a/src/app/dashboard/page.css
+++ b/src/app/dashboard/page.css
@@ -34,6 +34,21 @@ body {
   background: linear-gradient(122deg, #f0f4fe, #f7effd, #fecfdf, #fff7ee);
 }
 
+.updateBudget {
+  position: absolute;
+  background: linear-gradient(122deg, #467af8, #9c32e2, #ff2955, #ffb15a);
+  right: 0;
+  top: -46px;
+  padding: 1.8px;
+  border-radius: 54px;
+}
+
+.updateBudget > div {
+  padding: 8px 16px;
+  border-radius: 50px;
+  background: #fff;
+}
+
 .baseBar {
   padding: 16px 24px;
   border-radius: 50px;
@@ -41,6 +56,7 @@ body {
   font-size: 1em;
   font-weight: 600;
   margin-top: 20px;
+  position: relative;
 }
 
 .baseBar em {
