--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -47,6 +47,7 @@
   padding: 0.8em;
   border-radius: 50px;
   display: flex;
+  justify-content: space-between;
   /*box-shadow: inset 3px 1px 10px #f178ed87;*/
 }
 
